[package]
edition = "2021"
name = "matrix-bot"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bonsaidb = {version = "0.4.1", features = ["local", "local-async", "local-instrument"]}
bonsaimq = "0.2.0"
clap = {version = "4.0.9", features = ["derive"]}
color-eyre = "0.6.2"
config = "0.13.2"
ctrlc = {version = "3.2.2", features = ["termination"]}
dotenvy = "0.15.5"
feed-rs = "1.2.0"
matrix-sdk = {version = "0.6.2", features = ["eyre", "markdown", "e2e-encryption", "sled"]}
reqwest = {version = "0.11.12", features = ["json"]}
serde = {version = "1.0.138", features = ["derive"]}
serde_json = "1.0.85"
time = {version = "0.3.11", features = ["parsing", "serde", "formatting", "serde-well-known"]}
tokio = {version = "1.19.2", features = ["full"]}
tracing = "0.1.36"
tracing-futures = "0.2.5"
tracing-subscriber = {version = "0.3.14", features = ["env-filter"]}
url = { version = "2.3.1", features = ["serde"] }

[package.metadata.cargo-udeps.ignore]
normal = ["tracing-futures"]
